--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# directories
+.github
+.git
+
+# log
+*.log
 
 # dependencies
 node_modules
