--- a/Server/package.json
+++ b/Server/package.json
@@ -4,24 +4,26 @@
   "private": true,
   "main": "dist/index.js",
   "scripts": {
-  "dev": "ts-node-dev --respawn --transpile-only -r dotenv/config src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only -r dotenv/config src/index.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
     "lint": "eslint . --ext .ts"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@types/axios": "^0.9.36",
+    "axios": "^1.12.2",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
+    "express": "^4.18.2",
     "log4js": "^6.9.1"
   },
   "devDependencies": {
-    "swagger-ui-express": "^4.6.3",
-    "typescript": "^5.2.2",
-    "ts-node-dev": "^2.0.0",
-    "@types/node": "^20.0.0",
-    "@types/express": "^4.17.17",
     "@types/cors": "^2.8.17",
-    "@types/swagger-ui-express": "^4.1.3"
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.19.17",
+    "@types/swagger-ui-express": "^4.1.3",
+    "swagger-ui-express": "^4.6.3",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2"
   }
 }
