--- a/Server/package.json
+++ b/Server/package.json
@@ -7,7 +7,12 @@
     "dev": "ts-node-dev --respawn --transpile-only -r dotenv/config src/index.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "test-redis": "node test-redis.js",
+    "redis:start": "docker-compose up -d redis",
+    "redis:stop": "docker-compose down",
+    "redis:logs": "docker-compose logs redis",
+    "redis:status": "docker-compose ps redis"
   },
   "dependencies": {
     "@types/axios": "^0.9.36",
@@ -15,7 +20,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
-    "log4js": "^6.9.1"
+    "log4js": "^6.9.1",
+    "redis": "^4.6.12"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
