--- a/Server/src/config.json
+++ b/Server/src/config.json
@@ -3,5 +3,14 @@
         "name": "tushare",
         "url_root": "http://api.tushare.pro",
         "token": "46a0a2d4fdc0268a2d9bcf01d54f36251d026778563cb15c9c82e10b"
+    },
+    "redis": {
+        "host": "127.0.0.1",
+        "port": 6379,
+        "password": "",
+        "db": 0,
+        "retryDelayOnFailover": 100,
+        "enableReadyCheck": false,
+        "maxRetriesPerRequest": null
     }
 }
