API for get futures contracts

--- a/Server/src/config.json
+++ b/Server/src/config.json
@@ -2,11 +2,12 @@
     "upstream": {
         "name": "tushare",
         "url_root": "http://api.tushare.pro",
-        "token": "46a0a2d4fdc0268a2d9bcf01d54f36251d026778563cb15c9c82e10b"
+        "token": "46a0a2d4fdc0268a2d9bcf01d54f36251d026778563cb15c9c82e10b",
+        "backup_dir": "/home/data_backup"
     },
     "redis": {
         "host": "127.0.0.1",
-        "port": 6379,
+        "port": 6666,
         "password": "",
         "db": 0,
         "retryDelayOnFailover": 100,
