--- a/Website/package.json
+++ b/Website/package.json
@@ -9,9 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "i18next": "^25.5.2",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-i18next": "^16.0.0",
     "recharts": "^3.1.2",
     "styled-components": "^6.1.19"
   },
