--- a/Server/src/config.json
+++ b/Server/src/config.json
@@ -3,7 +3,7 @@
         "name": "tushare",
         "url_root": "http://api.tushare.pro",
         "token": "46a0a2d4fdc0268a2d9bcf01d54f36251d026778563cb15c9c82e10b",
-        "backup_dir": "/home/data_backup"
+        "backup_dir": "/home/QuantDirect.d/json"
     },
     "redis": {
         "host": "127.0.0.1",
