--- a/Server/package.json
+++ b/Server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only --poll --interval 1000 -r dotenv/config src/index.ts",
+    "dev": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
     "lint": "eslint . --ext .ts"
@@ -23,7 +23,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.19.17",
     "@types/swagger-ui-express": "^4.1.3",
-    "ts-node-dev": "^2.0.0",
+    "tsx": "^4.20.6",
     "typescript": "^5.2.2"
   }
 }
