--- a/Server/package.json
+++ b/Server/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "marketdirect-server",
+  "name": "quantdirect-server",
   "version": "0.1.0",
   "private": true,
   "main": "dist/index.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx watch --clear-screen=false --include=\"src/**/*\" --exclude=\"node_modules/**\" --exclude=\"dist/**\" src/index.ts",
+    "dev:nodemon": "nodemon",
+    "dev:chokidar": "chokidar \"src/**/*.ts\" \"src/**/*.js\" \"src/**/*.json\" -c \"tsx src/index.ts\" --initial",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
     "lint": "eslint . --ext .ts"
@@ -23,6 +25,8 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.19.17",
     "@types/swagger-ui-express": "^4.1.3",
+    "chokidar-cli": "^3.0.0",
+    "nodemon": "^3.0.2",
     "tsx": "^4.20.6",
     "typescript": "^5.2.2"
   }
