Detached data-fetching from server. The server will only cache local data in Redis, but will not maintain data files.

--- a/Server/redis.conf
+++ b/Server/redis.conf
@@ -445,7 +445,7 @@ save 3600 1 300 100 60 10000
 # and persistence, you may want to disable this feature so that Redis will
 # continue to work as usual even if there are problems with disk,
 # permissions, and so forth.
-stop-writes-on-bgsave-error yes
+stop-writes-on-bgsave-error no
 
 # Compress string objects using LZF when dump .rdb databases?
 # By default compression is enabled as it's almost always a win.
@@ -478,7 +478,7 @@ rdbchecksum yes
 # sanitize-dump-payload no
 
 # The filename where to dump the DB
-dbfilename "market-direct-data.rdb"
+dbfilename "quant-direct-data.rdb"
 
 # Remove RDB files used by replication in instances without persistence
 # enabled. By default this option is disabled, however there are environments
@@ -501,7 +501,7 @@ rdb-del-sync-files no
 # The Append Only File will also be created inside this directory.
 #
 # Note that you must specify a directory here, not a file name.
-dir "/home/QuantDirect.d"
+dir "/var/QuantDirect"
 
 ################################# REPLICATION #################################
 
