Optimized: Better support for editing indicators.

--- a/DataServer/tsconfig.json
+++ b/DataServer/tsconfig.json
@@ -9,7 +9,7 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "moduleResolution": "node",
+    "moduleResolution": "node16",
     "sourceMap": true,
     "incremental": true,
     "tsBuildInfoFile": ".tsbuildinfo"
