--- a/DataServer/tsconfig.json
+++ b/DataServer/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "commonjs",
+    "module": "node16",
     "outDir": "dist",
     "rootDir": "src",
     "strict": true,
