--- a/Engine/Cargo.toml
+++ b/Engine/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.0.1"
 edition = "2024"
 
 [dependencies]
+axum = { version = "0.8.8", features = ["ws"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.147"
 tokio = { version = "1.48.0", features = ["full"] }
+tracing = "0.1.44"
+tracing-subscriber = "0.3.22"
