refactor: Removed 'Engine' directory and updated .gitmodules to convert it to a submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "WebCTP"]
 	path = WebCTP
 	url = https://github.com/tab1949/WebCTP.git
+[submodule "Engine"]
+	path = Engine
+	url = https://github.com/tab1949/QDEngine.git
