build: Update dependencies

--- a/App/package.json
+++ b/App/package.json
@@ -17,18 +17,18 @@
   },
   "dependencies": {
     "i18next": "^25.5.2",
-    "next": "16.0.10",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^16.1.4",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-i18next": "^16.0.0",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/node": "^25.0.10",
+    "@types/react": "^19.2.9",
     "@types/react-dom": "^19",
-    "electron": "^35.7.5",
+    "electron": "^40.0.0",
     "electron-builder": "^26.4.0",
     "eslint": "^9",
     "eslint-config-next": "^16.0.10",
